syntax = "proto3";
option go_package="github.com/ahmad-khatib0/go/grpc/grpc-microservices-in-go/resilient/1-client-side-timeout-pattern/shipping";

message CreateShippingRequest {
  int32 user_id = 1;
  int32 order_id = 2;
  string address = 3;
}


message CreateShippingResponse {
  int32 shipping_id = 1;
}

service ShippingService {
  rpc Create(CreateShippingRequest) returns (CreateShippingResponse){}
}
